# FedBasic

./: README.md  pyproject.toml
flwr-0.6.12/: client.py  config.yaml  data.py  main.py  network.py  server.py  strategy.py  utils.py
project/: __init__.py  client_app.py  models.py  run.py  server_app.py  strategy.py  task.py
